auto-load next pages on artist search

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_activity_artist">Top 10 Tracks</string>
     <string name="title_activity_player">Player Activity</string>
     <string name="search_text_hint">Search for an artist…</string>
+    <string name="loading">Loading more…</string>
 </resources>
