--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="search_text_hint">Search for an artist…</string>
     <string name="loading">Loading more…</string>
     <string name="no_connection">We can\'t connect to the internet.\r\nPlease check your connection and try again.</string>
+    <string name="no_tracks_for_artist">Oops, we can\'t find tracks for %1$s</string>
 </resources>
